tests/ui/type/type-check/point-at-inference-3.stderr
error[E0308]: mismatched types
  --> $DIR/point-at-inference-3.rs:7:12
   |
LL |     v.push(0i32);
   |            ---- this is of type `i32`, which causes `v` to be inferred as `Vec<i32>`
...
LL |     v.push(1u32);
   |       ---- ^^^^ expected `i32`, found `u32`
   |       |
   |       arguments to this method are incorrect
   |
note: method defined here
  --> $SRC_DIR/alloc/src/vec/mod.rs:LL:COL
help: change the type of the numeric literal from `u32` to `i32`
   |
LL |     v.push(1i32);
   |             ~~~

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
